[package]
name = "pomodoro-cli"
version = "0.1.0"
authors = ["Jussi Kallio <jkallio@gmail.com>"]
edition = "2021"

[[bin]]
name = "pomodoro-cli"

[dependencies]
chrono = "0.4"
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
clap = { version = "4", features = ["derive", "cargo"] }
tokio = { version = "1", features = ["full"] }
rodio = "0.17.3"

[profile.release]
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for binary size.
lto = true          # Enable Link Time Optimization.
panic = "abort"     # Abort on panic. (Removes backtrace info.)
