[package]
name = "pomodoro-cli"
version = "1.2.2"
authors = ["Jussi Kallio <jkallio@gmail.com>"]
license = "MIT"
description = "A simple command line Pomodoro timer."
readme = "README.md"
homepage = "https://github.com/jkallio/pomodoro-cli"
repository = "https://github.com/jkallio/pomodoro-cli"
keywords = ["pomodoro", "timer"]
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
name = "pomodoro-cli"

[dependencies]
chrono = "0.4.31"
notify-rust = "4.10.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
dirs = "5.0.1"
clap = { version = "4.4.16", features = ["derive", "cargo"] }
rodio = "0.17.3"
crossterm = "0.27.0"


[profile.release]
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for binary size.
lto = true          # Enable Link Time Optimization.
panic = "abort"     # Abort on panic. (Removes backtrace info.)
